--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Beschreibung"
+      content="Ein revolutionäres Produkt der Hygienetechnologie"
     />
   
 
@@ -32,7 +32,8 @@
     <title>Sansiel GmbH</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      Sie müssen JavaScript aktivieren, um diese App ausführen zu können.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
